fix form spacing

--- a/style.css
+++ b/style.css
@@ -9,16 +9,12 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   height: 100vh;
   font-family: 'Archivo', sans-serif;
 }
-/* h1 {
-  font-size: 2.25em;
-  border: 1px solid green;
-  margin-bottom: 10%;
-} */
 h3 {
   padding: 1%;
 }
@@ -47,7 +43,8 @@ footer li a {
   color: black;
 }
 .container {
-  height: 95vh;
+  height: 90vh;
+  margin: 2.5vh 0;
 }
 .foodTypesContainer {
   width: 75%;
@@ -102,11 +99,11 @@ footer li a {
 }
 .formContainer {
   width: 80%;
-  height: 40%;
-  position: absolute;
-  top: 45%;
+  height: 60%;
+  position: fixed;
+  top: 50%;
   left: 50%;
-  margin: -20% 0 0 -40%;
+  transform: translate(-50%,-50%);
   border: 5px solid black;
   border-radius: 5px;
   background-color: black;
@@ -134,6 +131,7 @@ footer li a {
 #submitBtn {
   width: 25%;
   display: block;
+  text-align: center;
   margin: 1% auto 2%;
   padding: 2%;
 }
@@ -141,4 +139,5 @@ footer li a {
   border-radius: 8px;
   background-color: #C3D2D5;
   font-family: 'Archivo', sans-serif;
+  outline: none;
 }
